--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ six==1.16.0
 smmap==5.0.1
 streamlit==1.35.0
 streamlit-lottie==0.0.5
+streamlit-option-menu==0.3.12
 tenacity==8.3.0
 toml==0.10.2
 toolz==0.12.1
